--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -136,7 +136,7 @@ TEST YOUR METHOD AGAINST MODEL MISSPECIFICATION--WHAT IF DATA WERE GENERATED UND
 Pagel's classic limited to two binary traits, diveristree and HMM add flexibility to more than two states and variable transition rates throughout the tree, but remain limited in the discrete setting. Given infinite data, discrete transition matrix is good, but in finite samples it is problematic.... Unfortunately though this method is fundamentally limited to discrete traits, sometimes forcing researchers to dichotomize continuous variables (e.g. environmental harshness [@cornwallis2017cooperation]), which can lead to loss of power and inconsistent results [@dawson2012dichotomizing; @royston2006dichotomizing]. Because of this limitation to binary traits this method has not been applied to topics typically involving continuous traits (e.g. morphology, life history, brain size, etc.). 
 
 
-### 3.3 GDPM: how our method combines features of OU and Discrete, and PGLMMs
+## 4. GDPM: A new method that combines features of OU and Discrete, and PGLMMs
 
 
 
@@ -150,6 +150,16 @@ THREE SCENARIOS TO SIMULATE:
 
 IDEA: In simulation study, compare statistical power (PP > 0.9, or whatever) vs phylogenetic signal.
 
-## 4. Case study: Primate life history and niche complexity
+## 5. Case study: Primate brain size, life history and socio-ecological niche
 
+### 5.1. Background and anaylsis approach
+To illustrate the potential for novel contributions of our method with an empirical example we focus on the co-evolution of brain size, life history, and socio-ecological factors in primates. There is a rich literature trying to explain variation in brain size in primates (and other taxa), motivated in part by the fact that we humans have exceptionally large brains for our body size [@smaers2021evolution; @miller2019quantitative; @dunbar2017there; @powell2017re; @isler2014humans]. Most studies have related variation in brain size to potential predictors using PGLS (or independent contrasts, see 2.1.), with some more recent ones using phylogenetic path analysis [@navarrete2016coevolution] (see 2.4.). None, to our knowledge, have used dynamic causal inference though as Pagel's discrete method (see 3.2.) does not lend itself to continuous variables like brain size. The literature recognizes the difficulty of causal inference from these largely correlational analyses, stating for example that larger brains could just as well be a cause or a consequence of improved diet [@isler2014humans]. Furthermore, many predictors of brain size are highly collinear and missing data are common, resulting in different inferences depending on the specifics of the sample [@powell2017re; @wartel2019whatever]. There is therefore an urgent need for methods that can disentangle leaders from followers and detect reciprocal causation in the evolution of brain size, while flexibly accounting for collinearity, missing data and other issues like measurement error [@sandel2016assessing; @garamszegi2014uncertainties] or clade-specific allometry [@smaers2021evolution].
 
+We used a dataset of x species from [@decasien2017primate], which used PGLS models predicting brain size as a function of body size, diet (degree of frugivory) and sociality (group size). We augmented this with life-history variables (female age at maturity, longevity) from [@herculano2019longevity] to capture the cost of brain expansion in terms of delayed reproduction [@isler2009expensive], and downloaded a consensus phylogeny from 10ktrees [@arnold201010ktrees]. Rather than treating all these variables as independent causes of brain size, which is the implicit assumption of a standard multivariate PGLS, we inferred a plausible causal structure using exploratory graph analysis (EGA) [@martin2019ega+], which detects latent causes; a more comprehensive approach would compare this to causal structures derived from the literature and appropriate benchmarks [@martin2019ega+; @ringen2021novel]. Instead of modeling absolute brain size and including body size as a covariate, we directly modeled the allometric slope of the brain-body relationship. We also accounted for clade-specific allometry [@smaers2021evolution] using species-level intercepts and slopes and imputed missing data rather than dropping incomplete cases. For more detail see the accompying R code.
+
+### 5.2. Results and interpretation
+The EGA inferred a causal structure of two latent factors (Figure Xa), which we labelled *life history pace* (body size, female age at maturity, and longevity) and *niche complexity* (% fruit in diet, social group size, relative brain size). These factors are consistent with the observed fast-slow continuum of life history [@bielby2007fast; @healy2019animal], as well as the fact that frugivory is linked to sociality in primates [@wrangham1980ecological; @sterck1997evolution] and both are prominent predictors of relative brain size [@dunbar2017there; @decasien2017primate]. We therefore analyzed the co-evolution of these two latent factors using our DPM. 
+
+As shown in Figure Xb, we found that evolutionary changes in life-history pace (LH), shown along the x-axis, generate a co-evolutionary response in niche complexity (NC) (y-axis), as indicated by the diagonal blue line (the null-cline, where expected change in trait value = 0). Conversely, LH is unaffected by changes in NC, as indicated by the vertical black line, showing that LH stays near its average level (0) regardless of the value of NC. Thus, life-history pace is the leader, and niche complexity the follower in this co-evolutionary process. 
+
+These results are consistent with the observations that repeated changes in size characterized mammalian evolution [@pagel2022general] and changes in body size associated with new niches were arguably primarily responsible for changes in relative brain size [@smaers2021evolution]. Conversely, it appears moot to debate the relative importance of social and ecological factors in predicting relative brain size [@dunbar2017there; @decasien2017primate] as both are sides of the same encephelization coin. In short, as species evolve along the fast-slow continuum of life history (for exogenous reasons), selection acts to adjust their relative brain size, diet quality, and sociality in a coordinated fashion. 
